# farmterm

./: .gitignore  Makefile  README.md  pyproject.toml
farmterm/: __main__.py  demo.py  fertilizer.py  soil.py
tests/: test_farmterm.py
