[tool.poetry]
name = "farmterm"
version = "0.1.0"
description = ""
authors = ["Seth Woodworth <seth@sethish.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.9"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
